# pilgrim

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: cicd.yml  publish-to-pypi.yml
src/pilgrim/: _version.py  utils.py
src/pilgrim/graphs/: __init__.py  _baseline_graph.py
src/pilgrim/nodes/: node_factory.py
tests/: conftest.py
