[build-system]
requires = ["setuptools>=61.0.0", "wheel", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "pilgrim"
dynamic = ["version"]
description = "Query databases with LLMs"
authors = [
    {name = "Woonstad Rotterdam", email = "info@woonstadrotterdam.nl"},
    {name = "Ben Verhees", email = "ben.verhees@woonstadrotterdam.nl"},
    {name = "Tomer Gabay", email = "tomer.gabay@woonstadrotterdam.nl"},
    {name = "Tiddo Loos", email = "tiddo.loos@woonstadrotterdam.nl"},
]
keywords = ["TQA", "piligrm", "LLM", "database", "query", "sql"]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.12.0"
license = {file = "LICENSE"}
dependencies = [
]

[project.optional-dependencies]
test = [
]
dev = [
    "pilgirm[test]",
    "ruff==0.9.5",
    "pandas-stubs>=2.0.0"
]

[tool.pytest.ini_options]
addopts = "--cov=pilgrim --cov-report term --cov-report lcov:lcov.info"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
omit = [
    # omit generated code
    "src/pilgirm/_version.py",
]

[tool.setuptools_scm]
version_file = "src/pilgrim/_version.py"

[project.urls]
Homepage = "https://github.com/woonstadrotterdam/pilgrim"
Issues = "https://github.com/woonstadrotterdam/pilgrim/issues"

[tool.setuptools]
packages = ["pilgrim"]
package-dir = {"" = "src"}

[[tool.mypy.overrides]]
module = [
]

ignore_missing_imports = true
