[build-system]
requires = ["setuptools>=61.0.0", "wheel", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "pilgrim"
dynamic = ["version"]
description = "Query databases with LLMs"
authors = [
    {name = "Woonstad Rotterdam", email = "info@woonstadrotterdam.nl"},
    {name = "Ben Verhees", email = "ben.verhees@woonstadrotterdam.nl"},
    {name = "Tomer Gabay", email = "tomer.gabay@woonstadrotterdam.nl"},
    {name = "Tiddo Loos", email = "tiddo.loos@woonstadrotterdam.nl"},
]
keywords = ["TQA", "piligrm", "LLM", "database", "query", "sql"]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.12.0"
license = {file = "LICENSE"}
dependencies = [
    "langchain==0.3.20",
    "langchain-community==0.3.19",
    "langchain-core==0.3.43",
    "langchain-openai==0.3.8",
    "langchain-text-splitters==0.3.6",
    "langgraph==0.3.5",
    "langgraph-checkpoint==2.0.18",
    "langgraph-prebuilt==0.1.2",
    "langgraph-sdk==0.1.55",
    "langsmith==0.3.13",
]

[project.optional-dependencies]
test = [
    "pre-commit==3.*",
    "pytest==8.*",
    "pytest-cov==5.*",
    "types-requests==2.3.0",
]
dev = [
    "pilgrim[test]",
    "ruff==0.9.5",
    "ipykernel==6.29.5",
    "gradio==5.20.1",
]

[tool.pytest.ini_options]
addopts = "--cov=pilgrim --cov-report term --cov-report lcov:lcov.info"

[tool.coverage.run]
omit = [
    # omit generated code
    "src/pilgrim/_version.py",
]

[tool.setuptools_scm]
version_file = "src/pilgrim/_version.py"

[project.urls]
Homepage = "https://github.com/woonstadrotterdam/pilgrim"
Issues = "https://github.com/woonstadrotterdam/pilgrim/issues"

[tool.setuptools]
packages = ["pilgrim"]
package-dir = {"" = "src"}

[[tool.mypy.overrides]]
module = [
    "langchain_core.*",
    "langchain.*",
    "langgraph.*",
    "langchain_community.*"
]
ignore_missing_imports = true
